# papercode

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: Build.cpp  GLFWHelper.cpp  ImGuiHelper.cpp  ImGuiHelper.h  Localization.h  PaperCode.cpp  PaperCode.h  Stdafx.h  TextEditor.cpp  TextEditor.h  TextEditorAutoCom.cpp  UIEditor.cpp  UIEditorManager.cpp  UIExplorer.cpp  UIMessageBox.cpp  UINewProject.cpp  UIPreference.cpp  UIProperties.cpp  UISystem.cpp  icon.rc
src/core/: BuildOption.cppm  LogSystem.cppm  Manager.cppm  Project.cppm  Settings.cppm  SubProcess.cppm
src/platform/: FileDialog.cpp
src/platform/glad/: glad.c  glad.h
src/smartsense/: SmartSense.cppm
